Fix some easy deprecation warnings